# AgendaScolaire

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dockerCompose.yml  prometheus.yml  pyproject.toml
src/: __init__.py  fake_db.py  main.py  metrics.py  models.py  notification_manager.py  publisher.py  subscriber.py
